tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__CuttingaTreelogb-AAAAAAAAAAAAAAAAAAAC5w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 743,
  "prerequisites": [
    741
  ],
  "properties": {
    "auto_claim": false,
    "desc": "By making a lumber axe, you are now able to cut down an entire tree in one hit. Don't forget your backpack when you're cutting a sacred oak down.\n\nProtip: With wooden equivalents of casts, make a lumber axe completely out of netherrack - lower mining speed means less XP needed to level it up. Use the modifier slots to add Reinforced. Once you've leveled it up enough, upgrade the parts for better ones, such as steel, obzinite, or others. The higher-level metals will require an MV Extruder. Keep in mind that the auto-smelt modifier doesn't work, so don't bother with it.\n\nThe quest will accept a lumber axe from any material.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lCutting a Tree log by log is so Old School",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    741
  ],
  "rewards": [],
  "tasks": []
}
