tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__ExtraModifier-AAAAAAAAAAAAAAAAAAAEag==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1130,
  "prerequisites": [
    54,
    495
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you don't have an extra modifier on your tool you can easily add one. A gold block and a diamond are all you need.\n\nYou can add two more modifiers, but you'll need to read the tinkers book yourself to know what to use.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lExtra Modifier",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    54,
    495
  ],
  "rewards": [],
  "tasks": []
}
