tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__FactoryIronDoor-AAAAAAAAAAAAAAAAAAAG_Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1789,
  "prerequisites": [
    65
  ],
  "properties": {
    "auto_claim": false,
    "desc": "For your new Factory you need iron doors. Unfortunately, the recipe is really hard, needing steel.\n\nYou can choose two more iron doors as reward if you like.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lFactory Iron Door",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    65
  ],
  "rewards": [],
  "tasks": []
}
