tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__GT6StyledWiresan-AAAAAAAAAAAAAAAAAAAEew==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1147,
  "prerequisites": [
    67
  ],
  "properties": {
    "auto_claim": false,
    "desc": "They work basically the same as pipes, but you need wire cutters (or a soldering iron) instead of a wrench. Additionally, you take damage if they're not insulated (wire) but not if they are (cable).\n\nHint: If you click one wire or cable on the other it will auto-connect. Cables and pipes can be painted to make sure you do not cross your MV line with your EV line, or dump hot lava into your plastic water pipes. No boom today.\n\nHa ha just kidding there is always a boom today!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lGT6-Styled Wires and Cables",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    67
  ],
  "rewards": [],
  "tasks": []
}
