tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__HandpickingCrops-T_5nD6d8QQ29KrInOSI_Og==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12068592626495012666,
  "prerequisites": [
    741
  ],
  "properties": {
    "auto_claim": false,
    "desc": "By making a scythe you are now able to clear 3x3 blocks of vegetation, and to harvest 5x5 tiles of crops! The harvesting ability works on most non-magical crops, including IC2 crops! Keep in mind this scythe will harvest IC2 crops even if they are not fully mature.\n\n§6The quest should accept the tool whatever materials you used.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Handpicking Crops is So Old School",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    741
  ],
  "rewards": [],
  "tasks": []
}
